--- a/newword/templates/register.html
+++ b/newword/templates/register.html
@@ -30,5 +30,6 @@
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Register">
+    <a href="{% url 'login' %}">Login</a>
   </form>
 {% endblock %}
