--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,20 @@
   </title>
   {% load static %}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <style>
+    main {
+      min-height: 528px;
+    }
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: ghostwhite;
+      height: 50px;
+    }
+  </style>
   {% block css %}
-  {% endblock %}
+  {% endblock %}  
 </head>
 <body>
   <!-- header -->
@@ -24,6 +36,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="nav-cart" href="{% url 'history' %}">History</a>
+          {% if request.user.is_superuser %}
+          <a class="nav-item nav-link" id="nav-cart" href="{% url 'admin_history' %}">Admin history</a>
+          {% endif %}
           <a class="nav-item nav-link" id="nav-order" href="https://www.google.com.vn/">Help</a>
         </div>
         <div class="navbar-nav ml-auto">
@@ -45,9 +60,9 @@
   </main>
 
   <!-- footer -->
-  <!-- <footer>
-    copyright@2021
-  </footer> -->
+  <footer>
+    Made by Ghost.2021
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
