some adjust appearance and models

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,13 @@
   {% load static %}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <style>
-    main {
-      min-height: 528px;
+    body {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     footer {
+      margin-top: auto;
       display: flex;
       justify-content: center;
       align-items: center;
