--- a/newword/templates/test.html
+++ b/newword/templates/test.html
@@ -10,7 +10,8 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Test time: {{ test.test_time }} | {{ test.lesson|default:"Random" }} </h3>
+  <h3 class="d-inline">{{ test.lesson|default:"Random" }} </h3>|&nbsp;{{ test.test_time }}
+  <hr>
   <form method="POST">
     {% csrf_token %}
   {% for quest in questions %}
@@ -19,7 +20,7 @@
       {{ forloop.counter }}. {{ quest.question }}
     </p>
     {% if quest.qtype == 1 or quest.qtype == 3 %}
-    <input type="text" name="ans[]" value="">
+    <input type="text" name="ans[]" value="" autocomplete="off" autocorrect="off" >
     {% else %}
     <fieldset id="group{{ forloop.counter }}">
       <input type="radio" id="noun" class="type-radio" data-radio="radio{{ forloop.counter }}" name="ans{{ forloop.counter }}" value="1">
