--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
       background-color: ghostwhite;
       height: 50px;
     }
+    input {
+      padding: 5px 7px;
+    }
   </style>
   {% block css %}
   {% endblock %}  
