--- a/newword/templates/home.html
+++ b/newword/templates/home.html
@@ -12,11 +12,11 @@
 {% block content %}
   <div class="test row">
     <div class="col-md-6">
-      <h3>Random test</h3>
-      <a href="{% url 'random_test' %}">Random Test</a>
+      <h3><a href="{% url 'random_test' %}">Random Test</a></h3>
     </div>
     <div class="col-md-6">
       <h3>Lesson test</h3>
+      <hr>
       <ul>
         {% for lesson in lessons %}
         <li><a href="{% url 'lesson_test' lesson.number %}">Lesson {{ lesson.number }} </a></li>
