--- a/newword/templates/home.html
+++ b/newword/templates/home.html
@@ -12,7 +12,10 @@
 {% block content %}
   <div class="test row">
     <div class="col-md-6">
-      <h3><a href="{% url 'random_test' %}">Random Test</a></h3>
+      <h3>Random Test</h3>
+      <hr>
+      <a href="{% url 'random_test' 20 %}">20 questions test</a>
+      <a href="{% url 'random_test' 40 %}">40 questions test</a>
     </div>
     <div class="col-md-6">
       <h3>Lesson test</h3>
