--- a/newword/templates/home.html
+++ b/newword/templates/home.html
@@ -14,15 +14,21 @@
     <div class="col-md-6">
       <h3>Random Test</h3>
       <hr>
-      <a href="{% url 'random_test' 20 %}">20 questions test</a>
-      <a href="{% url 'random_test' 40 %}">40 questions test</a>
+      <ul>
+        <li>
+          <a href="{% url 'random_test' 20 %}">20 questions test</a>
+        </li>
+        <li>
+          <a href="{% url 'random_test' 40 %}">40 questions test</a>
+        </li>
+      </ul>
     </div>
     <div class="col-md-6">
       <h3>Lesson test</h3>
       <hr>
       <ul>
         {% for lesson in lessons %}
-        <li><a href="{% url 'lesson_test' lesson.number %}">Lesson {{ lesson.number }} </a></li>
+        <li><a href="{% url 'lesson_test' lesson.number %}">Lesson {{ lesson.number }} ({{ lesson.words.all.count }} new words)</a></li>
         {% endfor %}
       </ul>
     </div>
